1ex should equal .5em when the font has no x-height metric https://bugs.webkit.org/show_bug.cgi?id=80360

Patch by Tab Atkins <tabatkins@google.com> on 2012-10-04
Reviewed by Eric Seidel.

Source/WebCore:

Updated FontMetrics and CSSPrimitiveValue to have/use an explicit "hasXHeight" flag to determine how to size an 'ex' unit.

Updated a few of the platform font files to set the flag properly.

Patch cleanup by David Barr <davidbarr@chromium.org>.

Test: fast/css/ex-unit-with-no-x-height.html

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::computeLengthDouble):
* platform/graphics/FontMetrics.h:
(WebCore::FontMetrics::FontMetrics):
(WebCore::FontMetrics::setXHeight):
(FontMetrics):
(WebCore::FontMetrics::hasXHeight):
(WebCore::FontMetrics::setHasXHeight):
(WebCore::FontMetrics::reset):
* platform/graphics/skia/SimpleFontDataSkia.cpp:
(WebCore::SimpleFontData::platformInit):

LayoutTests:

If a font has no x-height metric, 1ex should equal .5em.

Test layout tweaked by David Barr <davidbarr@chromium.org>.

* fast/css/ex-unit-with-no-x-height-expected.txt: Added.
* fast/css/ex-unit-with-no-x-height.html: Added.

Canonical link: https://commits.webkit.org/116432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130437 268f45cc-cd09-0410-ab3c-d52691b4dbfc