Source/WebCore/platform/graphics/FontMetrics.h
@@ -36,6 +36,7 @@ public:
         , m_lineGap(0)
         , m_lineSpacing(0)
         , m_xHeight(0)
+        , m_hasXHeight(false)
     {
     }
 
@@ -72,7 +73,14 @@ public:
     void setLineSpacing(float lineSpacing) { m_lineSpacing = lineSpacing; }
 
     float xHeight() const { return m_xHeight; }
-    void setXHeight(float xHeight) { m_xHeight = xHeight; }
+    void setXHeight(float xHeight) 
+    { 
+        m_xHeight = xHeight;
+        m_hasXHeight = true;
+    }
+
+    bool hasXHeight() const { return m_hasXHeight && m_xHeight > 0; }
+    void setHasXHeight(bool hasXHeight) { m_hasXHeight = hasXHeight; }
 
     // Integer variants of certain metrics, used for HTML rendering.
     int ascent(FontBaseline baselineType = AlphabeticBaseline) const
@@ -113,6 +121,7 @@ private:
         m_lineGap = 0;
         m_lineSpacing = 0;
         m_xHeight = 0;
+        m_hasXHeight = false;
     }
 
     unsigned m_unitsPerEm;
@@ -121,6 +130,7 @@ private:
     float m_lineGap;
     float m_lineSpacing;
     float m_xHeight;
+    bool m_hasXHeight;
 };
 
 static inline float scaleEmToUnits(float x, unsigned unitsPerEm)
